// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-vue > should add vue-loader and VueLoaderPlugin correctly 1`] = `
{
  "test": /\\\\\\.vue\\$/,
  "use": [
    {
      "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/dist/index.js",
      "options": {
        "compilerOptions": {
          "preserveWhitespace": false,
        },
        "experimentalInlineMatchResource": true,
      },
    },
  ],
}
`;

exports[`plugin-vue > should add vue-loader and VueLoaderPlugin correctly 2`] = `null`;

exports[`plugin-vue > should add vue-loader and VueLoaderPlugin correctly 3`] = `
{
  "alias": {
    "@swc/helpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
  },
  "extensions": [
    ".ts",
    ".tsx",
    ".mjs",
    ".js",
    ".jsx",
    ".json",
    ".vue",
  ],
}
`;

exports[`plugin-vue > should allow to configure vueLoader options 1`] = `
{
  "test": /\\\\\\.vue\\$/,
  "use": [
    {
      "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/dist/index.js",
      "options": {
        "compilerOptions": {
          "preserveWhitespace": false,
        },
        "experimentalInlineMatchResource": true,
        "hotReload": false,
      },
    },
  ],
}
`;

exports[`plugin-vue > should define feature flags correctly 1`] = `
DefinePlugin {
  "_args": [
    {
      "__VUE_OPTIONS_API__": true,
      "__VUE_PROD_DEVTOOLS__": false,
      "__VUE_PROD_HYDRATION_MISMATCH_DETAILS__": false,
      "import.meta.env.ASSET_PREFIX": "\\"\\"",
      "import.meta.env.BASE_URL": "\\"/\\"",
      "import.meta.env.DEV": false,
      "import.meta.env.MODE": "\\"none\\"",
      "import.meta.env.PROD": false,
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.BASE_URL": "\\"/\\"",
    },
  ],
  "affectedHooks": "compilation",
  "name": "DefinePlugin",
}
`;
